# eoapi-workshop

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile.local  README.md  config.yaml.example  docker-compose.yml  environment.yml  index.ipynb  main.py  myst.yml  package-lock.json  package.json  pixi.toml  pyproject.toml  requirements.txt  start  workshop_setup.py
.github/: dependabot.yml
.github/scripts/: check_compose_cdk_versions.py
.github/workflows/: ci.yml  deploy.yml  destroy.yml  publish-workshop-image.yml
charts/eoapi-workshop/: README.md  values.yaml
data/: example-collection.json
docs/: 00-introduction.ipynb  01-stac_metadata.ipynb  02-database.ipynb  02-stac_fastapi_pgstac.ipynb  03-stac_fastapi_pgstac.ipynb  03-titiler_pgstac.ipynb  04-tipg.ipynb  04-titiler_pgstac.ipynb  05-tipg.ipynb  06-stac_transactions_auth.ipynb  database.ipynb  introduction.ipynb  stac_auth.py  stac_metadata.ipynb  workshop_setup.py
infrastructure/: app.py  config.py
infrastructure/charts/eoapi-workshop/: .gitignore  .helmignore  Chart.yaml  README.md  deploy.sh  values.yaml
infrastructure/charts/eoapi-workshop/charts/: eoapi-0.13.1.tgz  stac-manager-1.0.3.tgz
infrastructure/charts/eoapi-workshop/templates/: NOTES.txt  cluster-issuer.yaml  features-loader-job.yaml  jupyter.yaml  passthrough-ingress.yaml  (+1 more)
infrastructure/lambda/: workshop_config.py
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  README.md  cert_manager.tf  dns.tf  ingress.tf  kube.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
(+1 files in other folders)
