[project]
name = "fedgeoday-workshop-2025"
version = "0.1.0"
description = "materials for the eoAPI workshop at FedGeoDay 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pypgstac==0.9.6",
    "pystac>=1.12.2",
    "pystac-client>=0.8.6",
]

[dependency-groups]
deploy = [
    "eoapi-cdk>=8.0.3",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]
dev = [
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]
