[project]
name = "fedgeoday-workshop-2025"
version = "0.1.0"
description = "materials for the eoAPI workshop at FedGeoDay 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipywidgets>=8.1.7",
    "pypgstac[psycopg]==0.9.8",
    "pystac>=1.12.2",
    "pystac-client>=0.8.6",
    "rasterio>=1.4.3",
    "rio-stac>=0.12.0",
    "shapely>=2.1.2",
]

[dependency-groups]
deploy = [
    "eoapi-cdk==10.3.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]
dev = [
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

