[project]
name = "eoapi-workshop"
version = "0.1.0"
description = "materials for the eoAPI workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
deploy = [
    "eoapi-cdk==10.3.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]
dev = [
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

